crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_collision.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   ┌Colisión────────────────────────────────────────────────────────────────┐  │"
"   │el destino ya existe:                                                   │  │"
"   │/otro/notas.txt                                                         │  │"
"   │[Esc] cancelar [o] sobrescribir [s] saltar [r] renombrar [w] más nuevo  │  │"
"   │                                                                        │  │"
"   └────────────────────────────────────────────────────────────────────────┘  │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
