crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_confirm_transfer_cjk.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   │  @enl┌Copiar────────────────────────────────────────────────────┐         │"
"   │   not│notas.txt                                                 │         │"
"   │ ! �.d│A  /otro/日本語のファイル名.txt                           │         │" Hidden by multi-width symbols: [(21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
"   │      │[Enter] confirmar [Esc] cancelar                          │         │"
"   │      │                                                          │         │"
"   │      └──────────────────────────────────────────────────────────┘         │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
