crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_paints_over_the_palette.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo O┌ Paleta de comandos ──────────────────────────────────────┐da        "
"   ┌/casa─│ salir de norte              app.quit                  q  │─────────┐"
"   │Nombre│ cambiar de pane             pane.switch             Tab  │    Fecha│"
"   │  /doc│ abrir pestaña               pane.tab-new         Ctrl+t  │         │"
"   │  /src│ cerrar pestaña              pane.t…-close        Ctrl+w  │         │"
"   │  @enl┌A la papelera─────────────────────────────────────────────┐         │"
"   │   not│notas.txt                                                 │         │"
"   │ ! �.d│recuperable desde la papelera del sistema                 │         │"
"   │      │[Enter] confirmar [y] aprobar [n] denegar [Esc] cancelar  │         │"
"   │      │                                                          │         │"
"   │      └──────────────────────────────────────────────────────────┘         │"
"   │      │ ir a la pestaña 3           pane.t…goto-3             —  │         │"
"   │      │ ir a la pestaña 4           pane.t…goto-4             —  │         │"
"   │      │ ir a la pestaña 5           pane.t…goto-5             —  │         │"
"   └──────│ ir a la pestaña 6           pane.t…goto-6             —  │─────────┘"
"    /casa └ /  [enter] ejecutar · [esc] cerrar · [f1] ayuda ─────────┘ ↑  UTF-8 "
