crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_paints_over_the_settings_overlay.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render_80x24(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   ┌ Ajustes · 37 de 37 ────────────────────────────────────────────────────┐ha│"
"   │Apariencia                                                              │  │"
"   │Apariencia 10                                                           │  │"
"   │Paneles …istado 13  > Tema                         default              │  │"
"   │Abrir con 4           Tipografía de la interfaz                         │  │"
"   │Teclado y ratón 4     Tipografía monoespaciada                          │  │"
"   │Comportamiento 5      Tamaño de letra                                   │  │"
"   │Plugin┌A la papelera─────────────────────────────────────────────┐      │  │"
"   │      │notas.txt                                                 │      │  │"
"   │      │recuperable desde la papelera del sistema                 │      │  │"
"   │      │[Enter] confirmar [y] aprobar [n] denegar [Esc] cancelar  │      │  │"
"   │      │                                                          │      │  │"
"   │      └──────────────────────────────────────────────────────────┘      │  │"
"   │                    Paneles y listado                                   │  │"
"   │                      Barra de menú                true                 │  │"
"   │                      Barra de paneles             true                 │  │"
"   │                      Fila para subir              true                 │  │"
"   │                      Ver ocultos al arrancar      false                │  │"
"   │ Preset de color de la int…e tema propio, ADR 0020).                    │  │"
"   └ /  [tab] lado · [[/]] sección · [enter] editar · [ctrl+r] restablecer ·┘  │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
