crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_papelera_y_permanente.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: "format!(\"{papelera}\\n===\\n{permanente}\")"
---
"┌⟨file⟩/casa───────────────────────────┐┌⟨file⟩/otro───────────────────────────┐"
"│  /docs                               ││   cosa                               │"
"│  /src                                ││                                      │"
"│  @enlace                             ││                                      │"
"│   notas.txt                          ││                                      │"
"│ ! �.dat ┌A la papelera─────────────────────────────────────────────┐         │"
"│         │⟨file⟩/casa/notas.txt                                     │         │"
"│         │recuperable desde la papelera del sistema                 │         │"
"│         │[enter] confirmar [y] aprobar [n] denegar [esc] cancelar  │         │"
"│         │                                                          │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
" ⟨file⟩/casa  2/5                                                               "

===
"┌⟨file⟩/casa───────────────────────────┐┌⟨file⟩/otro───────────────────────────┐"
"│  /docs                               ││   cosa                               │"
"│  /src                                ││                                      │"
"│  @enlace                             ││                                      │"
"│   notas.txt                          ││                                      │"
"│ ! �.dat ┌Borrar PERMANENTE─────────────────────────────────────────┐         │"
"│         │⟨file⟩/casa/notas.txt                                     │         │"
"│         │⚠ SIN papelera: esto no se puede deshacer                 │         │"
"│         │[enter] confirmar [y] aprobar [n] denegar [esc] cancelar  │         │"
"│         │                                                          │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
" ⟨file⟩/casa  2/5                                                               "
