crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_pinta_encima_de_la_palette.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo O┌ Paleta de comandos ──────────────────────────────────────┐da        "
"          │ app.quit                 sa…de norte                   q │          "
"┌/casa────│ pane.switch              ca…de pane                  Tab │─────────┐"
"│Nombre▲  │ pane.tab-new             ab…ña                    Ctrl+t │    Fecha│"
"│  /docs  │ pane.tab-close           ce…aña                   Ctrl+w │         │"
"│  /src   ┌A la papelera─────────────────────────────────────────────┐         │"
"│  @enlace│notas.txt                                                 │         │"
"│   notas.│recuperable desde la papelera del sistema                 │         │"
"│ ! �.dat │[Enter] confirmar [y] aprobar [n] denegar [Esc] cancelar  │         │"
"│         │                                                          │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│         │ pane.tab-goto-3          ir…a pestaña 3                — │         │"
"│         │ pane.tab-goto-4          ir…a pestaña 4                — │         │"
"│         │ pane.tab-goto-5          ir…a pestaña 5                — │         │"
"└─────────│ pane.tab-goto-6          ir…a pestaña 6                — │─────────┘"
" /casa  2/└ /  [enter] ejecutar · [esc] cerrar · [f1] ayuda ─────────┘          "
