crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_pinta_encima_del_overlay_de_ajustes.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render_80x24(&app)
---
" Archivo  Marcar  Paneles  Pestañas  Buscar  Ver  Ayuda                         "
"┌⟨file⟩/casa───────────────────────────┐┌⟨file⟩/otro───────────────────────────┐"
"│No┌ Ajustes ───────────────────────────────────────────────────────────────┐ha│"
"│  │General                                                                 │  │"
"│  │> Tema                         default                                  │  │"
"│  │  Idioma                       auto                                     │  │"
"│  │  Tipografía de la interfaz                                             │  │"
"│ !│  Tipografía monoespaciada                                              │  │"
"│  │  Tamaño de letra                                                       │  │"
"│  │  Modo┌A la papelera─────────────────────────────────────────────┐      │  │"
"│  │  Redu│notas.txt                                                 │      │  │"
"│  │  Rató│recuperable desde la papelera del sistema                 │      │  │"
"│  │  Barr│[Enter] confirmar [y] aprobar [n] denegar [Esc] cancelar  │      │  │"
"│  │  Conf│                                                          │      │  │"
"│  │  Pres└──────────────────────────────────────────────────────────┘      │  │"
"│  │Plugins                                                                 │  │"
"│  │  Ajustes de plugins                                                    │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  │                                                                        │  │"
"│  │ Preset de color de la interfaz (o u… fichero de tema propio, ADR 0020).│  │"
"│  └ /  [↑/↓/pgup/pgdn] navegar · [enter] editar · [esc] cerrar ────────────┘  │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
" ⟨file⟩/casa  2/5                                                               "
