crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_transfer_name.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /doc┌Copiar a──────────────────────────────────────────────────┐         │"
"   │  /src│De  /casa                                                 │         │"
"   │  @enl│A   /otro/test1                                           │         │"
"   │   not│                                                          │         │"
"   │ ! �.d│nombre en el destino (edítalo para renombrar)             │         │"
"   │      │Captura de pantalla_20260909_083914.png_                  │         │"
"   │      │                                                          │         │"
"   │      │[enter] confirmar · [esc] cancelar                        │         │"
"   │      │                                                          │         │"
"   │      └──────────────────────────────────────────────────────────┘         │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
