crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_transfer_name_cjk_long.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /doc┌Mover a───────────────────────────────────────────────────┐         │"
"   │  /src│De  /casa                                                 │         │"
"   │  @enl│A   /otro                                                 │         │"
"   │   not│                                                          │         │"
"   │ ! �.d│nombre en el destino (edítalo para renombrar)             │         │"
"   │      │… のファイル名日本語のファイル名日本語のファイル名_       │         │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " ")]
"   │      │                                                          │         │"
"   │      │[enter] confirmar · [esc] cancelar                        │         │"
"   │      │                                                          │         │"
"   │      └──────────────────────────────────────────────────────────┘         │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
