crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_trash_and_permanent.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: "format!(\"{trash}\\n===\\n{permanent}\")"
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   │  @enl┌A la papelera─────────────────────────────────────────────┐         │"
"   │   not│notas.txt                                                 │         │"
"   │ ! �.d│recuperable desde la papelera del sistema                 │         │"
"   │      │[Enter] confirmar [y] aprobar [n] denegar [Esc] cancelar  │         │"
"   │      │                                                          │         │"
"   │      └──────────────────────────────────────────────────────────┘         │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "

===
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"   │  /src                              ││                                     │"
"   │  @enl┌Borrar PERMANENTE─────────────────────────────────────────┐         │"
"   │   not│notas.txt                                                 │         │"
"   │ ! �.d│⚠ SIN papelera: esto no se puede deshacer                 │         │"
"   │      │[Enter] confirmar [y] aprobar [n] denegar [Esc] cancelar  │         │"
"   │      │                                                          │         │"
"   │      └──────────────────────────────────────────────────────────┘         │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
