crates/norte-tui/tests/snapshots/snapshots_ui__snapshot_modal_trust_lua_init.snap
---
source: crates/norte-tui/tests/snapshots_ui.rs
expression: render(&app)
---
" Archivo Operar Marcar Ir Paneles Pestañas Buscar Ver Herramientas Ayuda        "
"   ┌/casa───────────────────────────────┐┌/otro────────────────────────────────┐"
"   │Nombre▲           Tamaño       Fecha││Nombre▲            Tamaño       Fecha│"
"   │  /docs                             ││   cosa               1 B            │"
"  ┌¿Ejecutar el init.lua del proyecto?───────────────────────────────────────┐ │"
"  │repo/.norte/init.lua (sha256 ab12cd34ef56ab78ab12cd34ef56ab78) se         │ │"
"  │ejecutará CON TUS PERMISOS. El script de un repo clonado puede hacer todo │ │"
"  │lo que tú puedas. y = confiar y ejecutar · n/Esc = denegar (se recuerda   │ │"
"  │hasta que el fichero cambie)                                              │ │"
"  │                                                                          │ │"
"  └──────────────────────────────────────────────────────────────────────────┘ │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   │                                    ││                                     │"
"   └────────────────────────────────────┘└─────────────────────────────────────┘"
"    /casa                                                  2/5  Nombre ↑  UTF-8 "
